2006-02-23  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:
	
	Added GECKO_CHECK_CONTRACTIDS. Fix variable name quoting in
	GECKO_GECKO_CONTRACTID.

	* configure.ac:
	
	Check with GECKO_CHECK_CONTRACTIDS.
	Remove redundant check for typeaheadfind.

2006-02-23  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:
	
	Refactored. Added GECKO_XPCOM_PROGRAM modelled after AC_LANG_PROGRAM
	but which produces a program which uses	XPCOM; and made
	GECKO_CHECK_CONTRACTID use this.

	* configure.ac:

	Add a check for the gecko typeaheadfind extension. Bug #329118.

2006-02-22  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-topics-entry.c
	
	Improved behaviour of completion popup.

2006-02-22  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-gecko-1-8.js:

	Unset general.useragent.extra.simple pref from xulrunner,
	we don't want that in our UA string.

2006-02-21  Peter Harvey  <peter.a.harvey@gmail.com>

	* data/ui/epiphany-fs-toolbar.xml
	* lib/egg/egg-toolbars-model.c
	* lib/egg/egg-toolbars-model.h
	
	Added "editable" attribute for toolbars.
	
	* data/ui/epiphany-ui.xml
	* lib/egg/egg-editable-toolbar.c
	* lib/egg/egg-editable-toolbar.h
	* src/ephy-toolbar.c
	* src/ephy-window.c
	
	Many improvements to toolbar menus. Includes
	changes to show visibility toggles in multiple
	locations.

	* lib/ephy-stock-icons.c
	* lib/ephy-stock-icons.h
	
	Additional stock icon for drag and drop.
	
	* src/bookmarks/ephy-bookmarks-ui.c
	
	Make 'customize toolbar' invisible when editing.
	
	* src/ephy-shell.c
	
	Mark the full-screen toolbar as non-removable.

2006-02-21  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmarks-menu.c
	* src/bookmarks/ephy-nodes-cover.c
	
	Minor tweaks to improve menu generation.
	
2006-02-21  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-properties.c
	
	Switched to using an expander after UI review.
	
2006-02-20  Christian Persch  <chpe@cvs.gnome.org>
